2004-04-27	blytkerchan
	* binary.c: new file
	* binary.h: ditto
	* how_heaps_work: ditto
	* array.c [pow2s]: move to binary.c
	(lg): ditto
	(pow2): ditto
	* heap.c: include license
	include stdlib.h
	[heap_left_child]: remove
	[heap_right_child]: ditto
	[SOFT_LOCK]: new macro
	[SOFT_UNLOCK]: ditto
	[HARD_LOCK]: ditto
	[HARD_UNLOCK]: ditto
	(heap_alloc): remove
	(heap_grow): ditto
	(heap_size): ditto
	(heap_num_entries): ditto
	(heap_new): re-implement
	(heap_free): ditto
	(heap_fix): ditto
	(heap_add): ditto
	(heap_top): ditto
	(heap_pop): ditto
	(heap_free_helper): new function
	(heap_select_node): ditto
	* heap.h: include binomial_tree.h
	[heap_node_t]: new field flag
	[heap_t]: re-write
	(heap_size): remove
	(heap_num_entries): ditto

2004-04-26	blytkerchan
	* Makefile.am [pkginclude_HEADERS]: fix type-o
	* binomial_tree.c: include required headers
	(binomial_tree_free): free all nodes if they exist
	(binomial_tree_head): rename to binomial_tree_get_root
	(binomial_tree_get_root): rename from binomial_tree_head
	don't free a node we need - free one we don't need :)
	(binomial_tree_set_root): new function
	(binomial_tree_node_free_deep): ditto
	(binomial_tree_node_get_left): ditto
	(binomial_tree_node_get_right): ditto
	(binomial_tree_node_set_left): ditto
	(binomial_tree_node_set_right): ditto
	(binomial_tree_node_get_parent): ditto
	(binomial_tree_node_register): ditto
	(binomial_tree_node_release): ditto
	(binomial_tree_node_get_value): ditto
	(binomial_tree_node_set_value): ditto
	(binomial_tree_node_foreach): ditto
	(binomial_tree_foreach): ditto
	* binomial_tree.h [binomial_tree_node_t]: fix type-o for parent and children types
	(binomial_tree_node_new): take parent node as parameter
	(binomial_tree_node_free_deep): new function
	(binomial_tree_foreach): ditto
	* binomial_tree.sgml: update binomial_tree_node_new function declaration in synopsis
	add words on the use of the functions
	add words on memory management
	add words on me (author section)